fixed header alignment

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -12,7 +12,7 @@ body{
 	position: relative;
 }
 
-#header-content {
+#header-content-container {
 	min-height: -webkit-calc(66vh - 50px);
 }
 
